--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -5,7 +5,7 @@
             <!-- Logo and Tagline -->
             <div class="mb-6 md:mb-0">
                 <a href="#" class="flex items-center">
-                    <img src="public/images/logo.png" class="h-10 me-3" alt="Tropical Haven Logo" />
+                    <img src="/images/logo.png" class="h-10 me-3" alt="Tropical Heaven Logo" />
                 </a>
                 <p class="mt-2 text-sm text-gray-500 dark:text-gray-400 max-w-xs">
                     Experience relaxation and excitement all in one place your perfect retreat awaits!
