--- a/src/app/common/popup-card/popup-card.component.html
+++ b/src/app/common/popup-card/popup-card.component.html
@@ -13,7 +13,7 @@
                 <!-- Product Images -->
                 <div class="w-full md:w-1/2 flex flex-col items-center">
                     <div class="relative group w-full max-w-md max-h-80 h-auto overflow-hidden rounded-lg shadow-lg">
-                        <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/529992676.jpg?k=f62c521c45cf09ba84af2e5c92da714e613781c96a52c49a8df86b47e7222d11&o=&hp=1"
+                        <img [src]="resource.image"
                             alt="Product Image"
                             class="w-full h-full object-cover rounded-lg transition-transform duration-300 group-hover:scale-105"
                             id="mainImage">
