--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,13 +1,24 @@
 <div
     class="h-full max-w-sm bg-white dark:bg-[rgb(21,28,38)] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-[1.03] flex flex-col">
     <div class="relative flex-grow">
-        <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/529992676.jpg?k=f62c521c45cf09ba84af2e5c92da714e613781c96a52c49a8df86b47e7222d11&o=&hp=1"
-            alt="Room" class="w-full h-48 object-cover">
-        <div class="absolute top-4 left-4 bg-pink-500 text-white text-sm px-4 py-1 rounded-full"
-            *ngIf="resource.rating > 4">
-            Top Rated
+        <div *ngIf="isLoading" class="flex items-center justify-center w-full h-48 bg-gray-200">
+          <div class="animate-spin rounded-full h-8 w-8 border-t-4 border-blue-500"></div>
         </div>
-    </div>
+      
+        <img
+          *ngIf="!isLoading"
+          [src]="resource.image"
+          alt="Room"
+          class="w-full h-48 object-cover"
+        />
+      
+        <div
+          *ngIf="resource.rating > 4"
+          class="absolute top-4 left-4 bg-pink-500 text-white text-sm px-4 py-1 rounded-full"
+        >
+          Top Rated
+        </div>
+      </div>      
 
     <div class="p-4 flex flex-col justify-between flex-grow">
         <div class="flex justify-between items-center mb-2">
