--- a/src/app/pages/admin/manage-halls/manage-halls.component.html
+++ b/src/app/pages/admin/manage-halls/manage-halls.component.html
@@ -85,7 +85,7 @@
                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                 <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
                     <img class="w-14 h-10"
-                        src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/529992676.jpg?k=f62c521c45cf09ba84af2e5c92da714e613781c96a52c49a8df86b47e7222d11&o=&hp=1"
+                        [src]="hall.image"
                         alt="Hall">
                     <div class="ps-3">
                         <div class="font-normal text-gray-500">{{hall.id}}</div>
