--- a/src/app/pages/admin/manage-rooms/manage-rooms.component.html
+++ b/src/app/pages/admin/manage-rooms/manage-rooms.component.html
@@ -85,7 +85,7 @@
                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                 <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
                     <img class="w-14 h-10"
-                        src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/529992676.jpg?k=f62c521c45cf09ba84af2e5c92da714e613781c96a52c49a8df86b47e7222d11&o=&hp=1"
+                        [src]="room.image"
                         alt="Room">
                     <div class="ps-3">
                         <div class="font-normal text-gray-500">{{room.id}}</div>
@@ -342,7 +342,7 @@
                 </div>
 
                 <!-- Submit Button -->
-                <button type="submit" (click)="addRoom()" data-modal-toggle="room-input-modal"
+                <button type="submit" (click)="addRoom()"
                     class="mt-4 font-bold text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Add Room
                 </button>
