--- a/src/app/pages/admin/overview/overview.component.html
+++ b/src/app/pages/admin/overview/overview.component.html
@@ -1,1 +1,137 @@
-<p>overview works!</p>
+<div>
+    <div class="lg:flex justify-between items-center mb-6">
+        <p class="text-2xl font-semibold mb-2 lg:mb-0">Welcome Back, {{usersName}}!</p>
+    </div>
+
+    <div class="flex flex-wrap -mx-3 mb-20" *ngIf="!showLoader">
+
+        <div class="w-1/2 xl:w-1/4 px-3">
+            <div class="w-full bg-white border text-blue-400 rounded-lg flex items-center p-6 mb-6 xl:mb-0">
+
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/hotel-information.png"
+                    alt="hotel-information" />
+
+                <div class="text-gray-700 ms-8">
+                    <p class="font-semibold text-3xl">{{stats.totalsOfResources[0]}}</p>
+                    <p>Total Rooms</p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="w-1/2 xl:w-1/4 px-3">
+            <div class="w-full bg-white border text-blue-400 rounded-lg flex items-center p-6 mb-6 xl:mb-0">
+                <img width="50" height="50"
+                    src="https://img.icons8.com/external-xnimrodx-lineal-xnimrodx/50/external-hall-wedding-xnimrodx-lineal-xnimrodx.png"
+                    alt="external-hall-wedding-xnimrodx-lineal-xnimrodx" />
+
+                <div class="text-gray-700 ms-8">
+                    <p class="font-semibold text-3xl">{{stats.totalsOfResources[1]}}</p>
+                    <p>Total Halls</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-1/2 xl:w-1/4 px-3">
+            <div class="w-full bg-white border text-blue-400 rounded-lg flex items-center p-6">
+                <img width="50" height="50" src="https://img.icons8.com/parakeet-line/48/trekking.png" alt="trekking" />
+
+                <div class="text-gray-700 ms-8">
+                    <p class="font-semibold text-3xl">{{stats.totalsOfResources[2]}}</p>
+                    <p>Total Day Out Packages</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-1/2 xl:w-1/4 px-3">
+            <div class="w-full bg-white border rounded-lg flex items-center p-6">
+
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 fill-current mr-4 hidden lg:block"
+                    viewBox="0 0 20 20">
+                    <path
+                        d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4" />
+                </svg>
+
+                <div class="text-gray-700">
+                    <p class="font-semibold text-3xl">{{stats.noCustomers}}</p>
+                    <p>Customers</p>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="flex flex-wrap -mx-3">
+
+        <div class="flex flex-wrap -mx-3">
+            <div class="w-full lg:w-1/2 px-3 mb-8 lg:mb-0">
+                <div class="bg-white border rounded-lg p-6 shadow-md">
+                    <p class="text-2xl font-semibold mb-4 text-gray-800">Reservation Trends</p>
+                    <p class="text-sm text-gray-600 mb-4">Visualizing reservation trends for rooms, halls, and day-out
+                        packages over the past and upcoming 15 days.</p>
+                    <canvas id="bar-chart" width="600" height="400"></canvas>
+                </div>
+            </div>
+
+            <div class="w-full lg:w-1/2 px-3">
+                <div class="bg-white border rounded-lg p-6 shadow-md">
+                    <p class="text-2xl font-semibold mb-4 text-gray-800">Daily Reservation Patterns</p>
+                    <p class="text-sm text-gray-600 mb-4">Tracking daily changes in room, hall, and day-out package
+                        reservations over the past and upcoming 15 days.</p>
+                    <canvas id="line-chart" width="600" height="400"></canvas>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="w-full xl:w-1/3 px-3">
+            <p class="text-xl font-semibold mb-4">Todays Reservations</p>
+            <div class="w-full bg-white border rounded-lg p-4">
+                <div
+                    class="w-full bg-white shadow-md rounded-lg flex flex-col md:flex-row justify-between items-center px-4 py-4 mb-4">
+                    <div class="flex-1 mb-4 md:mb-0">
+                        <p class="font-semibold text-xl text-gray-800">Reservation ID: RES13</p>
+                        <p class="text-sm text-gray-600">Resource ID: Room 1</p>
+                        <p class="text-sm text-gray-600">Customer ID: C1</p>
+                        <p class="text-sm text-gray-600">Members: 2</p>
+                    </div>
+                    <div class="flex flex-col items-center md:items-end">
+                        <p class="font-semibold text-lg text-green-600">$1500</p>
+                        <p class="text-sm font-bold text-green-500">Confirmed</p>
+                    </div>
+                </div>
+
+                <div
+                    class="w-full bg-white shadow-md rounded-lg flex flex-col md:flex-row justify-between items-center px-4 py-4 mb-4">
+                    <div class="flex-1 mb-4 md:mb-0">
+                        <p class="font-semibold text-xl text-gray-800">Reservation ID: RES15</p>
+                        <p class="text-sm text-gray-600">Resource ID: Room 3</p>
+                        <p class="text-sm text-gray-600">Customer ID: C1</p>
+                        <p class="text-sm text-gray-600">Members: 4</p>
+                    </div>
+                    <div class="flex flex-col items-center md:items-end">
+                        <p class="font-semibold text-lg text-red-600">$4500</p>
+                        <p class="text-sm font-bold text-red-500">Cancelled</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="flex items-center justify-center min-h-screen" *ngIf="showLoader">
+        <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
+            viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                fill="currentColor" />
+            <path
+                d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                fill="currentFill" />
+        </svg>
+        <span class="sr-only">Loading...</span>
+    </div>
+
+</div>
