--- a/src/app/pages/home/slider-card/slider-card.component.html
+++ b/src/app/pages/home/slider-card/slider-card.component.html
@@ -1,7 +1,7 @@
 <div
     class="swiper-slide group dark:bg-gray-800 border border-solid border-gray-200 dark:border-gray-600 rounded-2xl max-sm:max-w-sm max-sm:mx-auto p-6 transition-all duration-500 hover:border-blue-700">
     <div class="flex items-center gap-5 mb-5 sm:mb-9">
-        <img class="rounded-full object-cover" src="https://ui-avatars.com/api/?name=Jane+D&size=60&rounded=true"
+        <img class="rounded-full object-cover" [src]="'https://ui-avatars.com/api/?name='+customerComment.name+'&size=60&rounded=true'"
             alt="avatar">
         <div class="grid gap-1">
             <h5 class="dark:text-white font-medium transition-all duration-500">{{customerComment.name}}</h5>
